# customrom

./: DESIGN.md  GW_TOOLS_COMPATIBILITY.md  INTEGRATION_GUIDE.md  README.md  STATUS_REPORT.md  TESTING_GUIDE.md  saturn_cli.sh  setup_and_test.sh
device/google/bluejay/: init.satord.rc
device/google/bluejay/sepolicy/: file_contexts  satord.te
frameworks/base/core/java/android/app/: ActivityThread.patch  InstrumentationLoader.java
frameworks/base/core/java/android/os/: IDeviceLifecycle.aidl
frameworks/base/services/core/java/com/android/server/lifecycle/: DeviceLifecycleService.java
patches/: Context.patch  SystemServer.patch
tests/java/android/app/: InstrumentationLoaderTest.java
tests/java/com/android/server/lifecycle/: DeviceLifecycleServiceTest.java
tests/native/: Android.bp  CMakeLists.txt  satord_test.cpp
tests/stubs/android/app/: ActivityManager.java  IActivityManager.java
tests/stubs/android/content/: Context.java
tests/stubs/android/os/: Binder.java  IDeviceLifecycle.java  LocalSocket.java  LocalSocketAddress.java  Process.java  RemoteException.java  UserHandle.java
tests/stubs/android/util/: AndroidException.java  Log.java  Slog.java
